<resources>
    <string name="app_name">Translator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word">کلمه:</string>
    <string name="numberOfAllWords">تعداد کلمات موجود در دیکشنری:</string>
    <string name="hintEnterWord">کلمه مورد نظر را وارد کنید.</string>
    <string name="meaningOfWord">معنی کلمه:</string>
    <string name="example">مثال:</string>
    <string name="synonym">مترادف:</string>
    <string name="urlWikiPedia">لینک ویکی پدیا:</string>
    <string name="register">ثبت</string>
    <string name="delete">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="editWord">ویرایش کلمه:</string>
    <string name="registerEdition">ثبت تغییرات</string>
    <string name="wordTitle">کلمه</string>
    <string name="meaningTitle">معنی کلمه</string>
</resources>