<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ShowAndEditFragment"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@drawable/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="70"
                android:background="@drawable/pink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/meaningOfWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meaningOfWord"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="70"
                android:background="@drawable/pink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="70"
                android:background="@drawable/pink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/synonym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synonym"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="70"
                android:background="@drawable/pink"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linkLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textSize="18sp"
                android:gravity="center"
                android:background="@drawable/grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urlWikiPedia"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_weight="70"
                android:background="@drawable/pink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <View
                android:id="@+id/favorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_favorite_border_24" />

            <Button
                android:id="@+id/play"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_baseline_play_arrow_24" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:background="@drawable/rectangle" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/delete"
            app:strokeWidth ="5dp"
            app:strokeColor="@color/pink"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <LinearLayout
            android:id="@+id/editLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:visibility="gone">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editWord"
                android:textSize="25sp"
                android:gravity="center"
                android:background="@drawable/pink"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="30dp">
                <EditText
                    android:id="@+id/editedWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:background="@drawable/grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="70"
                    android:background="@drawable/pink"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="30dp">
                <EditText
                    android:id="@+id/editedMeaningOfWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:background="@drawable/grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meaningOfWord"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="70"
                    android:background="@drawable/pink"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="30dp">
                <EditText
                    android:id="@+id/editedExample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:background="@drawable/grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/example"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="70"
                    android:background="@drawable/pink"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="30dp">
                <EditText
                    android:id="@+id/editedSynonym"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:background="@drawable/grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synonym"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="70"
                    android:background="@drawable/pink"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="30dp">
                <EditText
                    android:id="@+id/editedUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="center"
                    android:background="@drawable/grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/urlWikiPedia"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="70"
                    android:background="@drawable/pink"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <View
                    android:id="@+id/addFavorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_baseline_favorite_border_24" />
                <Button
                    android:id="@+id/record"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_baseline_mic_24" />

                <Button
                    android:id="@+id/stop"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_baseline_stop_24" />



            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerEdition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerEdition"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:background="@drawable/rectangle" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</layout>